PLCB-19391 Upgrade Java upgrade from 11 to 17